# data-quality-etl-starter

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/expected/: customer_schema.json  generated_order_schema.json  order_schema.json
data/input/: messy_customers.csv  messy_orders.xlsx  mock_api_orders.json  nested_customers.json
data/output/: cleaned_customers.csv  quality_report.json  quality_report.md
data/output/csv/: quality_report.json  quality_report.md
data/output/excel/: cleaned_orders.csv  quality_report.json  quality_report.md
data/output/json/: cleaned_customers_json.csv  quality_report.json  quality_report.md
data/output/mock_api/: cleaned_api_orders.csv  quality_report.json  quality_report.md
docs/: ai_ready.md  analytics.md  api.md  bi.md  metabase.md  postgres.md  pydantic-schema.md  troubleshooting.md  upwork-portfolio-note.md  workflow.md
screenshots/: README.md
scripts/: generate_sample_data.py  run_ai_ready_demo.py  run_analytics_demo.py  run_bi_demo.py
src/dq_etl_starter/: __init__.py  ai_ready.py  analytics.py  api.py  bi.py  clean.py  cli.py  db.py  exporters.py  mock_api.py  models.py  normalize.py  readers.py  report.py  services.py  validate.py
tests/: test_ai_ready.py  test_ai_ready_outputs.py  test_analytics.py  test_api.py  test_bi.py  test_bi_reporting_sql.py  test_clean.py  test_cli.py  test_exporters_parquet.py  test_exporters_postgres.py  test_exporters_sqlite.py  test_generate_sample_data.py  test_models.py  test_normalize.py  test_readers.py  test_report.py  test_validate.py
