[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-etl-starter"
version = "0.4.0"
description = "A small Python data quality ETL starter for messy CSV, Excel, JSON, mock API data, SQLite, optional PostgreSQL export, optional FastAPI validation, and optional analytics-ready Parquet/DuckDB export."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bob Oner" }]
dependencies = [
  "pandas>=2.2",
  "pydantic>=2.7",
  "openpyxl>=3.1",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
postgres = [
  "psycopg[binary]>=3.2",
]
analytics = [
  "duckdb>=1.0",
  "pyarrow>=15.0",
  "faker>=25.0",
]

[project.scripts]
dq-etl = "dq_etl_starter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that require external services such as PostgreSQL",
]
