[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-etl-starter"
version = "0.6.0"
description = "A small Python data quality ETL starter for messy CSV, Excel, JSON, mock API data, SQLite, optional PostgreSQL export, optional FastAPI validation, analytics-ready export, BI-ready reporting demo, and optional AI-ready data preparation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bob Oner" }]
dependencies = [
  "pandas>=2.2",
  "pydantic>=2.7",
  "openpyxl>=3.1",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
postgres = [
  "psycopg[binary]>=3.2",
]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
]
analytics = [
  "duckdb>=1.0",
  "pyarrow>=15.0",
  "faker>=25.0",
]
all = [
  "pytest>=8.0",
  "psycopg[binary]>=3.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "duckdb>=1.0",
  "pyarrow>=15.0",
  "faker>=25.0",
]

[project.scripts]
dq-etl = "dq_etl_starter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that require external services such as PostgreSQL",
]
